# bytecaskdb

./: .clangd  .gitignore  CONTRIBUTING.md  LICENSE  README.md  xmake.lua
.devcontainer/: Dockerfile  devcontainer.json
.github/: copilot-instructions.md
benchmarks/: baseline_results.json  engine_bench.cpp  engine_bench_results.csv  map_bench.cpp  map_bench_results.csv
bytecaskdb/: bytecask.cpp  bytecask.cppm  concurrency.cppm  data_entry.cppm  data_file.cppm  hint_entry.cppm  hint_file.cppm  internals.cppm  radix_tree.cppm  serialization.cppm  types.cppm  util.cppm
docs/: bytecask_benchmark_showcase.md  bytecask_design.md  bytecask_project_plan.md  engine_api_design.md  file_format.md  mariadb_engine_design.md  old_bytecask_design.md  parallel_recovery_design.md  persistent_radix_tree_design.md  project_organization.md  recovery_time_estimates.md  transaction_design.md
include/: bytecask_c.h
mariadb/: CMakeLists.txt  bytecaskdb_plugin.cc  ha_bytecaskdb.cc  ha_bytecaskdb.h  key_encoding.cc  key_encoding.h  row_encoding.cc  row_encoding.h
scripts/: benchmark_showcase.py  fix_compile_commands.py  gen_compile_commands.sh  run_engine_bench.py  run_map_bench.py  sys-info.sh
src/: bytecask.cpp  bytecask.cppm  bytecask_c.cpp  concurrency.cppm  data_entry.cppm  data_file.cppm  hint_entry.cppm  hint_file.cppm  internals.cppm  main.cpp  radix_tree.cppm
src/engine/: bytecask.cpp  bytecask.cppm  concurrency.cppm  crc32.cppm  data_entry.cppm  data_file.cppm  group_writer.cppm  hint_entry.cppm  hint_file.cppm  internals.cppm  persistent_ordered_map.cppm  radix_tree.cppm  rcu_var.cppm  serialization.cppm  types.cppm  util.cppm
tests/: bytecask_test.cpp  concurrency_test.cpp  data_entry_test.cpp  group_writer_test.cpp  hint_file_test.cpp  persistent_ordered_map_test.cpp  radix_tree_test.cpp
